[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "electronics_shop_project"}]

[tool.poetry.dependencies]
python = "3.10.10"
pytest = "^7.2.2"
attrs = "22.2.0"
colorama = "0.4.6"
exceptiongroup = "1.1.1"
iniconfig = "2.0.0"
packaging = "23.0"
pluggy = "1.0.0"
tomli = "2.0.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
